@@ -1,3 +1,7 @@
+2007-10-17 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/gimv_nav_win.[ch]: Use private struct.
+
 2007-10-16 Takuro Ashie <ashie@homa.ne.jp>
 
 	* plugins/thumbnail/gimv_thumb.c, plugins/image_loader/prefs_spi.c,
